<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F3040404"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="23"
        android:text="@string/Second_activity_heading"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/nameT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#57FFFFFF"
        android:text="@string/StudentNameTxt"
        android:textColor="#090909"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/phoneT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#63FDFCFC"
        android:text="@string/StudentPhnoTxt2"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameT"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/locationT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#63FDFCFC"
        android:text="@string/Location_text"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageT"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/ageT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#63FDFCFC"
        android:text="@string/age_text"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneT"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/bioT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#63FDFCFC"
        android:text="@string/Bio_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationT"
        app:layout_constraintVertical_bias="0.273" />
</androidx.constraintlayout.widget.ConstraintLayout>