<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Heading1"
        android:layout_width="183dp"
        android:layout_height="73dp"
        android:layout_marginStart="112dp"
        android:text="@string/heading"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <ImageView
        android:id="@+id/Im1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/loginImage"
        android:src="@drawable/login_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Heading1"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@color/black"
        android:backgroundTint="#4F101010"
        android:cursorVisible="true"
        android:elegantTextHeight="true"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:maxLength="25"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Im1"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StudentNameTxt"
        android:textAllCaps="true"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/nameET"
        app:layout_constraintTop_toBottomOf="@+id/Im1"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/StudentPhnoTxt2"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nameET"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.164" />

    <EditText
        android:id="@+id/PhoneET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:background="@color/black"
        android:backgroundTint="#4F101010"
        android:cursorVisible="true"
        android:elegantTextHeight="true"
        android:hint="@string/enter_phone_number_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:singleLine="true"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/nameET"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="InvalidId,TextContrastCheck" />

    <Spinner
        android:id="@+id/LOCSp1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PhoneET"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/Location_text"
        android:textAllCaps="true"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PhoneET"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/age_text"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LOCSp1"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/AgeET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/black"
        android:backgroundTint="#4F101010"
        android:cursorVisible="true"
        android:elegantTextHeight="true"
        android:ems="10"
        android:hint="@string/age_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/LOCSp1"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bio_text"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AgeET"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/BioET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/black"
        android:backgroundTint="#4F101010"
        android:cursorVisible="true"
        android:elegantTextHeight="true"
        android:ems="10"
        android:hint="@string/Bio_hint"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="100"
        android:minHeight="48dp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/LOCSp1"
        app:layout_constraintVertical_bias="0.434"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/clearBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Clear_Button"
        android:onClick="CLearFunc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BioET"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/submitBut"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.629" />

    <Button
        android:id="@+id/submitBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Button"
        android:onClick="SubmitFunc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.395" />

</androidx.constraintlayout.widget.ConstraintLayout>